--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,17 @@
 
-<div>
-  <a routerLink="/counter">counter</a>
+<div class="container">
+  <div class="row">
+    <div class="col-sm">
+      <a routerLink="/counter">counter</a>
+    </div>
+    <div class="col-sm">
+      <a routerLink="/todo">todo</a>
+    </div>
+    <div class="col-sm">
+      <a routerLink="/todo-entity">todo-entity</a>
+    </div>
+  </div>
 </div>
 <hr/>
-
-<!-- <a routerLink="/about">关于我们</a> -->
 
 <router-outlet></router-outlet>
