--- a/src/app/pages/todo-entity/todo-entity.component.html
+++ b/src/app/pages/todo-entity/todo-entity.component.html
@@ -15,8 +15,7 @@
     <li *ngFor='let todo of todos | async'
      class="list-group-item d-flex align-items-center p-1  justify-content-between">
       {{ todo.title }}
-      <!-- (click)='deleteTodo(todo.id)'  -->
-      <button type="button" class="btn btn-outline-danger btn-sm">删除</button>
+      <button (click)='deleteTodo(todo.id)' type="button" class="btn btn-outline-danger btn-sm">删除</button>
     </li>
 
   </ul>
